<?xml version="1.0"?>
<package>
  <name>robotnik_pp_msgs</name>
  <version>0.1.0</version>
  <description>Messages and actions for planning the autonomous movement of the robot.</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/robotnik_pp_msgs</url> 
  <url type="repository">https://github.com/RobotnikAutomation/robotnik_purepursuit_planner</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/robotnik_purepursuit_planner/issues</url>

  
  <author email="rnavarro@robotnik.es">Román Navarro</author>


  <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  

  <export>
   

  </export>
</package>
